// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderingService setup() render() renders "core" from legacy request 1`] = `
Object {
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "/mock-server-basepath",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:core",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
    "version": Any<String>,
  },
  "legacyMode": false,
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page 1`] = `
Object {
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "/mock-server-basepath",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:core",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
    "version": Any<String>,
  },
  "legacyMode": false,
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page driven by settings 1`] = `
Object {
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "/mock-server-basepath",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:core",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {
        "theme:darkMode": Object {
          "userValue": true,
        },
      },
    },
    "version": Any<String>,
  },
  "legacyMode": false,
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page for blank basepath 1`] = `
Object {
  "basePath": "",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:core",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
    "version": Any<String>,
  },
  "legacyMode": false,
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" with excluded user settings 1`] = `
Object {
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "/mock-server-basepath",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:core",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
    "version": Any<String>,
  },
  "legacyMode": false,
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "legacy" page 1`] = `
Object {
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "/mock-server-basepath",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:legacy",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
    "version": Any<String>,
  },
  "legacyMode": true,
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "legacy" page for blank basepath 1`] = `
Object {
  "basePath": "",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:legacy",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
    "version": Any<String>,
  },
  "legacyMode": true,
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "legacy" with custom vars 1`] = `
Object {
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "/mock-server-basepath",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:legacy",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
    "version": Any<String>,
  },
  "legacyMode": true,
  "uiPlugins": Array [],
  "vars": Object {
    "fake": "__TEST_TOKEN__",
  },
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "legacy" with excluded user settings 1`] = `
Object {
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "/mock-server-basepath",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:legacy",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
    "version": Any<String>,
  },
  "legacyMode": true,
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "legacy" with excluded user settings and custom vars 1`] = `
Object {
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "env": Object {
    "binDir": Any<String>,
    "cliArgs": Object {
      "basePath": false,
      "dev": true,
      "open": false,
      "optimize": false,
      "oss": false,
      "quiet": false,
      "repl": false,
      "runExamples": false,
      "silent": false,
      "watch": false,
    },
    "configDir": Any<String>,
    "configs": Array [],
    "homeDir": Any<String>,
    "isDevClusterMaster": false,
    "logDir": Any<String>,
    "mode": Object {
      "dev": true,
      "name": "development",
      "prod": false,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": false,
      "version": Any<String>,
    },
    "pluginSearchPaths": Any<Array>,
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "app": Object {},
    "basePath": "/mock-server-basepath",
    "branch": Any<String>,
    "buildNum": Any<Number>,
    "buildSha": Any<String>,
    "bundleId": "app:legacy",
    "devMode": true,
    "nav": Array [],
    "serverName": "http-server-test",
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
    "version": Any<String>,
  },
  "legacyMode": true,
  "uiPlugins": Array [],
  "vars": Object {
    "fake": "__TEST_TOKEN__",
  },
  "version": Any<String>,
}
`;
